Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4681

llmount.sh error message when parsing NID can be better defined

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • None
    • None
    • 3
    • 12869

      When running llmount.sh it can error when trying to parse the NID while formatting the OSTs. It errors with the following:

      Formatting mgs, mds, osts
      Format mds1: /tmp/lustre-mdt1
      Format ost1: /tmp/lustre-ost1
      mkfs.lustre: Can't parse NID 'lustremaster@tcp'
      mkfs.lustre: exiting with 1 (Operation not permitted)

      This error could be better stated by saying that 'hostname' with address needs to be added to /etc/hosts, or something to give users a better idea how to fix this problem.

            bobbielind Bobbie Lind (Inactive)
            bobbielind Bobbie Lind (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: